@@ -10,19 +10,19 @@
 	NS_MAIN				=>	'',
 	NS_TALK				=>	'Разговор',
 	NS_USER				=>	'Корисник',
-	NS_USER_TALK			=>	'Корисник_разговор',
+	NS_USER_TALK			=>	'Разговор_со_корисник',
 	NS_PROJECT			=>	$wgMetaNamespace,
-	NS_PROJECT_TALK			=>	$wgMetaNamespace . '_разговор',
+	NS_PROJECT_TALK			=>	'Разговор_за_' . $wgMetaNamespace ,
 	NS_IMAGE			=>	'Слика',
-	NS_IMAGE_TALK			=>	'Слика_разговор',
+	NS_IMAGE_TALK			=>	'Разговор_за_слика',
 	NS_MEDIAWIKI			=>	'МедијаВики',
-	NS_MEDIAWIKI_TALK		=>	'МедијаВики_разговор',
+	NS_MEDIAWIKI_TALK		=>	'Разговор_за_МедијаВики',
 	NS_TEMPLATE			=>	'Шаблон',
-	NS_TEMPLATE_TALK		=>	'Шаблон_разговор',
+	NS_TEMPLATE_TALK		=>	'Разговор_за_шаблон',
 	NS_HELP				=>	'Помош',
-	NS_HELP_TALK			=>	'Помош_разговор',
+	NS_HELP_TALK			=>	'Разговор_за_помош',
 	NS_CATEGORY			=>	'Категорија',
-	NS_CATEGORY_TALK		=>	'Категорија_разговор',
+	NS_CATEGORY_TALK		=>	'Разговор_за_категорија',
 );
 
 
